fix #1 add horizontal scroll icon for mobile

--- a/src/ui/styles/app.scss
+++ b/src/ui/styles/app.scss
@@ -89,8 +89,8 @@ $mobile-breakpoint: 500px;
     height: 180px;
     margin: 0 10px;
     flex-shrink: 0;
-    border: 3px solid transparent;
-    transition: 0.3s border, 1s max-width, 0.3s opacity;
+    outline: 3px solid transparent;
+    transition: 0.3s outline, 1s max-width, 0.3s opacity;
     max-width: 250px;
     cursor: pointer;
 
@@ -99,11 +99,11 @@ $mobile-breakpoint: 500px;
     }
 
     &:hover {
-      border-color: transparentize($primary, 0.5);
+      outline-color: transparentize($primary, 0.5);
     }
   
     &.active {
-      border-color: $primary;
+      outline-color: $primary;
     }
 
     &.hidden {
@@ -111,7 +111,6 @@ $mobile-breakpoint: 500px;
       opacity: 0;
       margin: 0;
       padding: 0;
-      border: 0;
     }
   }
 
